tests/errors/cxx/include-chain.cpp
#include <h1.hpp>

int main() { return 0; }
